# zero_knowledge_proof_auth_platform

./: Cargo.toml  README.md
client/: Cargo.toml
common/zkp_protobuf/: Cargo.toml  build.rs
common/zkp_protobuf/protos/: zkp_platform.proto  zkp_protocol.proto
common/zkp_protobuf/src/: lib.rs  main.rs  zkp_platform.rs  zkp_protocol.rs
server/: Cargo.toml
server/src/: main.rs
zkp_grpc_client/: Cargo.toml
zkp_grpc_client/src/: main.rs
zkp_grpc_server/: Cargo.toml
