[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chaum_pedersen_auth = "0.1.0"
zkp_protobuf = { path = "../common/zkp_protobuf" }
tonic = { workspace = true }
prost = { workspace = true }
num-bigint = { workspace = true }
tokio = { workspace = true }
